syntax = "proto3";

option go_package = "github.com/PatrickMatthiesen/DSYS-gRPC-template/proto";

package proto;

// compile command:
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative [path to file, ex. proto/template.proto]


// The template service definition.
// you can call it whatever you want
service Template
{
    //one message is sent and one is recieved
    rpc Put (KeyValPair) returns (PutAck);
    rpc Get (Key) returns (GetAck);
}

message Key {
    int64 key = 1;
}

message KeyValPair {
    int64 key = 1;
    int64 val = 2;
}

message PutAck {
    bool response = 1;
}

message GetAck {
    bool response = 1;
}